--- a/.gitignore
+++ b/.gitignore
@@ -114,10 +114,10 @@ gradle-app.setting
 # Common working directory
 run/
 runs/
-
 look/
 docs/
 src/mixin/java/org/virgil/akiasync/mixin/crypto/quantum/
+src/mixin/java/org/virgil/akiasync/mixin/util/collision/
 
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
 !gradle-wrapper.jar
